crates/puffin-cli/tests/snapshots/pip_sync__install_numpy_py37.snap
---
source: crates/puffin-cli/tests/pip_sync.rs
info:
  program: puffin
  args:
    - pip-sync
    - requirements.txt
    - "--cache-dir"
    - /tmp/.tmpQ4q9dh
  env:
    VIRTUAL_ENV: /tmp/.tmp6vLqVn/.venv
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 1 package in [TIME]
Downloaded 1 package in [TIME]
Unzipped 1 package in [TIME]
Uninstalled 1 package in [TIME]
Installed 1 package in [TIME]
 + numpy==1.21.6
 - werkzeug==2.0.0

