crates/puffin-cli/tests/snapshots/pip_sync__install_numpy_py38.snap
---
source: crates/puffin-cli/tests/pip_sync.rs
info:
  program: puffin
  args:
    - pip-sync
    - requirements.txt
    - "--cache-dir"
    - /tmp/.tmpL9E9fl
  env:
    VIRTUAL_ENV: /tmp/.tmp0yDHj5/.venv
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 1 package in [TIME]
Downloaded 1 package in [TIME]
Unzipped 1 package in [TIME]
Installed 1 package in [TIME]
 + numpy==1.24.4

