crates/puffin-cli/tests/snapshots/pip_sync__install_ujson.snap
---
source: crates/puffin-cli/tests/pip_sync.rs
info:
  program: puffin
  args:
    - pip-sync
    - requirements.txt
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpXdV1Uk
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpAX03SD/.venv
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 1 package in [TIME]
Downloaded 1 package in [TIME]
Unzipped 1 package in [TIME]
Installed 1 package in [TIME]
 + ujson @ https://files.pythonhosted.org/packages/43/1a/b0a027144aa5c8f4ea654f4afdd634578b450807bb70b9f8bad00d6f6d3c/ujson-5.7.0.tar.gz

