crates/puffin-cli/tests/snapshots/pip_sync__install_url_then_install_version.snap
---
source: crates/puffin-cli/tests/pip_sync.rs
info:
  program: puffin
  args:
    - pip-sync
    - requirements.txt
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmp83DdhQ
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpWIocF0/.venv
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Audited 1 package in [TIME]

