crates/puffin-cli/tests/snapshots/pip_sync__missing_requirements_txt.snap
---
source: crates/puffin-cli/tests/pip_sync.rs
info:
  program: puffin
  args:
    - pip-sync
    - requirements.txt
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: failed to open file `requirements.txt`
  Caused by: No such file or directory (os error 2)

